[package]
name = "Data_Tool_Pack_RS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-sheets4 = "5.0.5"
hyper = "0.14"
hyper-rustls = "0.25"
serde = "1.0"
serde_json = "1.0"
yup-oauth2 = "9.0.0"
tokio = { version = "1.2", features = ["macros", "io-util", "rt", "rt-multi-thread", "fs"] }
